<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostrarDatosActivity"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    >
    <TextView
        android:id="@+id/tvDatos1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/strMostrarDato1"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/tvDatos2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDatos1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:text="@string/strMostrarDato2"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDatos2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/strMostrarDato3"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="15sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>